@@ -7,6 +7,7 @@ Changes for 1.3.5.1
 -Fixed an inability to copy the game save based on old files at episode directory
 -Fixed the vanilla bug: incorrect blooper effect when stomped (needed an npc-*.txt with the "jumphurt=0" flag being set)
 -Changed the default compat.ini value "fix-autoscroll-speed" into "false" to prevent possible glitches from invalid setup given by several old levels
+-The "Checkpoint" sound will be played when selecting the "Save and Continue" menu item at the pause menu
 
 Changes for 1.3.5
 -Fixed the gamepad control stuck because of axes returned value that doesn't equal the initial state on some devices
